--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,7 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/rust:1.0.14-bullseye",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
     "customizations": {
         "vscode": {
             "extensions": ["1yib.rust-bundle", "rust-lang.rust-analyzer", "vadimcn.vscode-lldb"]
