--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,19 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
+    "secrets": {
+        "SUBSTREAMS_API_TOKEN": {
+            "description": "The API token to access the Substreams endpoint.",
+            "documentationUrl": "https://substreams.streamingfast.io/documentation/consume/authentication"
+        }
+    },
     "customizations": {
         "vscode": {
-            "extensions": ["1yib.rust-bundle", "rust-lang.rust-analyzer", "vadimcn.vscode-lldb"],
+            "extensions": [
+                "1yib.rust-bundle",
+                "rust-lang.rust-analyzer",
+                "vadimcn.vscode-lldb"
+            ],
             "tasks": [
                 {
                     "label": "Substreams: build package",
